@@ -1,0 +1,39 @@
+<!--
+  ~ This file is part of Doodle Android.
+  ~
+  ~ Doodle Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Doodle Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2019-2021 by Patrick Zedler
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group android:scaleX="2.475"
+      android:scaleY="2.475"
+      android:translateX="24.3"
+      android:translateY="24.3">
+    <path
+        android:pathData="M15.61,5.1a1.99,1.99 0,0 0,-0.96 2.64,1.99 1.99,0 0,0 2.64,0.97 1.99,1.99 0,0 0,0.96 -2.65,1.99 1.99,0 0,0 -2.64,-0.96zM16.21,6.46a0.5,0.5 0,0 1,0.03 0,0.5 0.5,0 0,1 0.66,0.23 0.5,0.5 0,0 1,-0.24 0.67,0.5 0.5,0 0,1 -0.67,-0.25 0.5,0.5 0,0 1,0.21 -0.65z"
+        android:fillColor="@android:color/system_accent1_600"/>
+    <path
+        android:pathData="M15.95,20.11L10.33,8.03c-0.76,-1.65 -2.37,-2.24 -4.02,-1.47 -1.65,0.76 -2.24,2.37 -1.47,4.02l3.57,7.7a1.3,1.3 0,0 0,1.61 0.58l8.8,-4.09a1.3,1.3 0,0 0,0.58 -1.6l-1.53,-3.3"
+        android:strokeWidth="1.2"
+        android:fillColor="#00000000"
+        android:strokeColor="@android:color/system_neutral1_900"
+        android:strokeLineCap="round"/>
+  </group>
+</vector>
